--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,9 @@
 [versions]
 bitwig-extension-api = "21"
+ktfmt-gradle = "0.22.0"
 
 [libraries]
 bitwig-extension-api = { module = "com.bitwig:extension-api", version.ref = "bitwig-extension-api" }
+
+[plugins]
+ktfmt-gradle = { id = "com.ncorti.ktfmt.gradle", version.ref = "ktfmt-gradle" }
